--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.2",
+    "react-sound": "^1.2.0",
     "react-tsparticles": "^1.18.12",
     "tsparticles": "^1.18.12",
+    "use-sound": "^2.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
